...
import kotlinx.coroutines.flow.receiveAsFlow
import kotlinx.coroutines.launch
import kotlin.coroutines.CoroutineContext
import kotlin.coroutines.EmptyCoroutineContext
import kotlin.time.Duration.Companion.seconds

const val TAG_BUTTON_BACK = "TAG_BUTTON_BACK"

const val TAG_HOST = "TAG_HOST"
const val TAG_PORT = "TAG_PORT"

const val TAG_UNARY_RPC = "TAG_UNARY_RPC"
const val TAG_CLIENT_STREAMING_RPC = "TAG_CLIENT_STREAMING_RPC"
const val TAG_SERVER_STREAMING_RPC = "TAG_SERVER_STREAMING_RPC"
const val TAG_BIDI_STREAMING_RPC = "TAG_BIDI_STREAMING_RPC"

const val TAG_SERVER_RESPONSE = "TAG_SERVER_RESPONSE"

const val TAG_OPEN_CLOSE_SENDING_FLOW = "TAG_OPEN_CLOSE_SENDING_FLOW"

private sealed class Destination(val name: String, val description: String, val buttonTag: String) {
    data object Home : Destination("Home", "Select which of the following scenarios to explore.", "")

    data object Unary : Destination("Unary Call", "Send a number to the server and get the square.", TAG_UNARY_RPC)
    data object ClientStreaming : Destination(
...
